--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ h1 {
   transition: transform 0.3s ease;
   user-select: none; /* Prevents the blue highlight box when clicking */
 }
+.theme-toggle img[src="/sun.png"] {
+  filter: brightness(1.75);
+}
+
 .theme-toggle:hover img {
   transform: scale(1.1) rotate(15deg);
 }
